ec2-instance/ec2.tf
# key pair
resource "aws_key_pair" "my_key" {
  key_name = "terra-key-ec2"
  public_key = file("terra-key-ec2.pub")
}

# VPC and Security Group
resource "aws_default_vpc" "default" {
  
}

resource "aws_security_group" "my_group" {
  name = "automate-sg"
  description = "This will add a TF generated security group"
  vpc_id = aws_default_vpc.default.id

  # inbound rules
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = [ "0.0.0.0/0" ]
    description = "SSH Open"
  }

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "HTTP Open"
  }

  ingress {
    from_port = 8000
    to_port = 8000
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Notes App"
  }

  # outbount rules
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "automate-sg"
  }
}

# ec2 instance
resource "aws_instance" "my_instance" {
  for_each = tomap({
    automate_micro = "t2.micro",
    automate_medium = "t2.medium"
  })

  key_name = aws_key_pair.my_key.key_name
  security_groups = [aws_security_group.my_group.name]
  instance_type = each.value
  ami = var.ec2_ami_id
  user_data = file("install_nginx.sh")

  root_block_device {
    volume_size = var.ec2_root_storage_size
    volume_type = "gp3"
  }

  tags = {
    Name = each.key
  }
}
